# snail_gomoku

./: .gitignore  README.md  pyproject.toml
snail_gomoku/: board.py  const.py  gomoku_game.py  main.py  mainwindow.py  ui.py
tests/: test_snail_gomoku.py
