[tool.poetry]
name = "snail_gomoku"
version = "0.1.0"
description = ""
authors = ["PowerSnail <hj5fb@virginia.edu>"]
include = [ "ui/mainwindow.ui" ]


[tool.poetry.dependencies]
python = ">=3.7,<3.9"
pyside2 = "^5.14.1"
numpy = "^1.18.1"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
black = "^19.10b0"

[tool.poetry.scripts]
snail-gomoku = "snail_gomoku.main:main"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


